deploy: cc36746ac9d1e8df534dccce2d20911744870ab7

--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@
 
 
 <div class="main-content">
-<p><img src="https://img.shields.io/github/workflow/status/wyhaines/opentelemetry-sdk.cr/OpenTelemetry%20CI?style=for-the-badge&amp;logo=GitHub" alt="OpenTelemetry CI" />
+<p><img src="https://img.shields.io/github/actions/workflow/status/wyhaines/opentelemetry-sdk.cr/ci.yml?branch=main&amp;style=for-the-badge&amp;logo=GitHub" alt="OpenTelemetry CI" />
 <a href="https://github.com/wyhaines/opentelemetry-sdk.cr/releases"><img src="https://img.shields.io/github/release/wyhaines/opentelemetry-sdk.cr.svg?style=for-the-badge" alt="GitHub release" /></a>
 <img src="https://img.shields.io/github/commits-since/wyhaines/opentelemetry-sdk.cr/latest?style=for-the-badge" alt="GitHub commits since latest release (by SemVer)" /></p>
 <h1><a id="open-telemetry-sdk" class="anchor" href="#open-telemetry-sdk">
